--- a/SECURE-iT-Yourself/MainPage/SY_NetworkLogUpload.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_NetworkLogUpload.xaml
@@ -23,16 +23,48 @@
             </StackPanel>
             <Grid Margin="15" Grid.Column="1" Background="#9CCAE0">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="10"/>
-                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="15"/>
+                    <RowDefinition Height="50"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <Canvas Grid.Row="1">
-                    <Rectangle Width="320" Height="50" Fill="#25315D" ></Rectangle>
-                    <Label Canvas.Left="125" FontSize="30" Foreground="White">Network Logs</Label>
-                </Canvas>
-                
-                
+                <Grid Grid.Row="1">
+                    <Canvas >
+                        <Rectangle Width="300" Height="50" Fill="#25315D" ></Rectangle>
+                        <Label Canvas.Left="105" Canvas.Top="3" VerticalContentAlignment="Center" FontSize="25" Foreground="White">Network Logs</Label>
+                    </Canvas>
+                </Grid>
+                <Grid Grid.Row="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="80" />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="100" />
+                    </Grid.ColumnDefinitions>
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="25"/>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="10"/>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="10" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="60" />
+                    </Grid.RowDefinitions>
+
+                    <Label HorizontalAlignment="Right" Grid.Column="1" Grid.Row="1" FontSize="20" >Log Name: </Label>
+                    <TextBox Grid.Column="2" Grid.Row="1"></TextBox>
+
+                    <Label Grid.Column="1" Grid.Row="3" FontSize="20" HorizontalAlignment="Right">Log Description: </Label>
+                    <TextBox TextWrapping="Wrap" Grid.Column="2" Grid.RowSpan="2" Height="100" Grid.Row="3"></TextBox>
+
+                    <Label Grid.Column="1" Grid.Row="6" FontSize="20" HorizontalAlignment="Right" >Log File: </Label>
+                    <TextBox Grid.Column="2" Grid.Row="6"></TextBox>
+
+                    <Button Grid.Column="3" Grid.Row="6" Width="80" Background="DarkSeaGreen">Upload</Button>
+                    <Button Grid.Column="3" Grid.Row="7" Width="80" Margin="0,10,0,0" Background="DarkOliveGreen" >Next</Button>
+                    
+                </Grid>
             </Grid>
         </Grid>
     </Grid>
