--- a/SECURE-iT-Yourself/MainPage/SY_ViewSpecificCase.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_ViewSpecificCase.xaml
@@ -1,19 +1,19 @@
-﻿<Window x:Class="MainPage.SY_ViewCases"
+﻿<Window x:Class="MainPage.SY_ViewSpecificCase"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MainPage"
         mc:Ignorable="d"
-        Title="SY_ViewCases" Height="450" Width="800">
+        Title="SY_ViewSpecificCase" Height="450" Width="800">
     <Grid Background="#39424D">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="40"/>
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            
-            
+
+
             <Button Cursor="Hand" HorizontalAlignment="Left" Width="90" Height="40" Background="Transparent" Foreground="Transparent" BorderBrush="Transparent">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                     <Image Width="35" Height="35"  Source="pack://application:,,,/Resources/img/black_arrow.png"/>
@@ -69,7 +69,7 @@
                     </DataGrid>
                 </Grid>
             </Grid>
-            
+
         </Grid>
     </Grid>
 </Window>
