--- a/SECURE-iT-Yourself/MainPage/Beck_Option.xaml
+++ b/SECURE-iT-Yourself/MainPage/Beck_Option.xaml
@@ -1,15 +1,15 @@
-﻿<Window x:Class="Beck_NC.Beck_Option"
+﻿<Window x:Class="MainPage.Beck_Option"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Beck_NC"
+        xmlns:local="clr-namespace:MainPage"
         mc:Ignorable="d"
         Title="Beck_Option1" Height="600" Width="900">
     <StackPanel Background="#39424D">
         <Border BorderBrush="Black" BorderThickness="1" Height="142">
             <DockPanel Background="#A9D0E5" Height="142" LastChildFill="False" >
-                <Button Content="Back" Background="red" Foreground="white" Height="64" Opacity="0.6" VerticalAlignment="Top" Width="204" Margin="10 35 10 10" FontSize="20" />
+                <Button Content="Back" Background="red" Foreground="white" Height="64" Opacity="0.6" VerticalAlignment="Top" Width="204" Margin="10 35 10 10" FontSize="20" Click="Button_Click" />
                 <Label x:Name="lblMisconfigType" Content="Label" Height="142" VerticalAlignment="Top" Width="335" FontSize="30" FontWeight="Bold" FontStyle="Italic" RenderTransformOrigin="0.5,0.5" HorizontalContentAlignment="Center" ScrollViewer.VerticalScrollBarVisibility="Disabled" VerticalContentAlignment="Center">
                     <Label.RenderTransform>
                         <TransformGroup>
