--- a/SECURE-iT-Yourself/MainPage/SY_ViewSpecificTeam.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_ViewSpecificTeam.xaml
@@ -8,7 +8,25 @@
         Title="SY_ViewSpecificTeam" Height="600" Width="900">
     <Grid Background="#39424D">
         <Grid>
-            
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40"/>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+
+            <StackPanel Orientation="Horizontal" Background="" >
+                <Button Cursor="Hand" HorizontalAlignment="Left" Width="90" Height="40" Background="Transparent" Foreground="Transparent" BorderBrush="Transparent">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                        <Image Width="35" Height="35"  Source="pack://application:,,,/Resources/img/black_arrow.png"/>
+                        <Label VerticalContentAlignment="Center" FontSize="20" Foreground="White">Back</Label>
+                    </StackPanel>
+                </Button>
+                <Rectangle Width="110"></Rectangle>
+                <Label FontSize="20" Foreground="White" >Case Name</Label>
+            </StackPanel>
+
+            <Grid Grid.Row="1" Background="#9CCAE0">
+             
+            </Grid>
         </Grid>
     </Grid>
 </Window>
