About to finish overall GUI, touching on SY_AddTag
I'm almost done before I can finally code!

--- a/SECURE-iT-Yourself/MainPage/SY_ViewSpecificTeam.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_ViewSpecificTeam.xaml
@@ -13,19 +13,55 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <StackPanel Orientation="Horizontal" Background="" >
+            <StackPanel Orientation="Horizontal" Background="#404A56" >
                 <Button Cursor="Hand" HorizontalAlignment="Left" Width="90" Height="40" Background="Transparent" Foreground="Transparent" BorderBrush="Transparent">
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                         <Image Width="35" Height="35"  Source="pack://application:,,,/Resources/img/black_arrow.png"/>
-                        <Label VerticalContentAlignment="Center" FontSize="20" Foreground="White">Back</Label>
+                        <Label VerticalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="20" Foreground="White">Back</Label>
                     </StackPanel>
                 </Button>
                 <Rectangle Width="110"></Rectangle>
                 <Label FontSize="20" Foreground="White" >Case Name</Label>
             </StackPanel>
 
-            <Grid Grid.Row="1" Background="#9CCAE0">
-             
+            <Grid Grid.Row="1" Background="#39424D">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="10"/>
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <Grid Background="#25315D">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="110"/>
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+
+                    <StackPanel>
+                        <Label HorizontalContentAlignment="Center" Foreground="White" FontSize="30" >Anormalies Detected</Label>
+                        <Grid Height="50">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+
+                            <Button VerticalContentAlignment="Center" Background="YellowGreen" Width="150" FontSize="20">Scan</Button>
+                            <Button Grid.Column="1" Width="150" FontSize="20" Background="DarkRed">Tag Anormaly</Button>
+                        </Grid>
+                    </StackPanel>
+
+                    <ListView BorderBrush="Transparent" Grid.Row="1" Background="Transparent">
+                        
+                    </ListView>
+                    
+                </Grid>
+
+                <GridSplitter Background="Gray" Cursor="Hand" Grid.Column="1" HorizontalAlignment="Center"></GridSplitter>
+
+                <ListView BorderBrush="Transparent" Background="Transparent" Grid.Column="2">
+                    
+                </ListView>
+                
             </Grid>
         </Grid>
     </Grid>
