--- a/SECURE-iT-Yourself/MainPage/SY_NetworkStart.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_NetworkStart.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MainPage.MainWindow"
+﻿<Window x:Name="window" x:Class="MainPage.SY_NetworkStart"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -24,8 +24,8 @@
         </StackPanel>
         <Canvas Grid.Column="1">
             <Label FontSize="50" Foreground="White" Canvas.Top="43" Canvas.Left="130">Network Forensic</Label>
-            <Button Canvas.Right="570" Canvas.Top="150" Cursor="Hand" Background="Transparent" BorderBrush="Transparent">
-                <Image Height="230" Width="230" Source="pack://application:,,,/Resources/img/new_icon.png" >
+            <Button Click="New_Case_Network" Canvas.Right="570" Canvas.Top="150" Cursor="Hand" Background="Transparent" BorderBrush="Transparent">
+                <Image Cursor="Hand" Height="230" Width="230" Source="pack://application:,,,/Resources/img/new_icon.png" >
                 </Image>
             </Button>
             <Label FontSize="40" Canvas.Bottom="120" Canvas.Left="-70" Foreground="White">Create New Case</Label>
