--- a/SECURE-iT-Yourself/MainPage/SY_ViewSpecificCase.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_ViewSpecificCase.xaml
@@ -80,7 +80,7 @@
                         <ColumnDefinition Width="180" />
                     </Grid.ColumnDefinitions>
 
-                    <Button Grid.Column="1" FontSize="25" Background="DarkSeaGreen" >Create Report</Button>
+                    <Button Margin="0,0,10,0" Grid.Column="1" FontSize="25" Background="DarkSeaGreen" >Create Report</Button>
                     
                     
                 </Grid>
