--- a/SECURE-iT-Yourself/MainPage/SY_NewCase.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_NewCase.xaml
@@ -22,16 +22,16 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
-                <Button Cursor="Hand" HorizontalAlignment="Left" Width="90" Height="40" Background="Transparent" Foreground="Transparent" BorderBrush="Transparent">
+                <Button Click="Go_Back" Cursor="Hand" HorizontalAlignment="Left" Width="90" Height="40" Background="Transparent" Foreground="Transparent" BorderBrush="Transparent">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                         <Image Width="35" Height="35"  Source="pack://application:,,,/Resources/img/black_arrow.png"/>
-                        <Label FontSize="20" Foreground="White">Back</Label>
+                        <Label FontSize="20"  FontFamily="/MainPage;component/Fonts/#Apex New Light">Back</Label>
                     </StackPanel>
                 </Button>
 
                 <Canvas Grid.Row="1">
                     <Rectangle Canvas.Top="5" Height="50" Width="320" Fill="#25315D" Panel.ZIndex="0" ></Rectangle>
-                    <Label Canvas.Top="7" Canvas.Left="80" Foreground="White" FontSize="25">Network Description</Label>
+                    <Label Canvas.Top="10" Canvas.Left="80" Foreground="White" FontSize="25" FontFamily="/MainPage;component/Fonts/#Renault BQ">Network Description</Label>
                 </Canvas>
                 <Grid Grid.Row="2" Margin="10" >
                     <Grid.ColumnDefinitions>
@@ -47,26 +47,28 @@
                         
                     </Grid.RowDefinitions>
 
-                    <Label HorizontalAlignment="Right" FontSize="20">Case Name:</Label>
-                    <TextBox Width="230" Grid.Column="1" Margin="0,0,0,0"></TextBox>
-                    <Label HorizontalAlignment="Right" Grid.Row="1" FontSize="20">Case Description:</Label>
+                    <Label HorizontalAlignment="Right" FontSize="20" FontFamily="/MainPage;component/Fonts/#Apex New Light">Case Name:</Label>
+                    <TextBox Width="230" Grid.Column="1" Margin="0,0,0,0" TextChanged="TextBox_TextChanged"></TextBox>
+                    <Label HorizontalAlignment="Right" Grid.Row="1" FontSize="20" FontFamily="/MainPage;component/Fonts/#Apex New Light">Case Description:</Label>
                     <TextBox Height="120" Margin="0,12,0,12" Grid.Column="1" Grid.Row="1"></TextBox>
-                    <Label Margin="0,0,0,0" HorizontalAlignment="Right" FontSize="20" Grid.Row="2">Investigated By:</Label>
+                    <Label Margin="0,0,0,0" HorizontalAlignment="Right" FontSize="20" Grid.Row="2" FontFamily="/MainPage;component/Fonts/#Apex New Light">Investigated By:</Label>
                     <StackPanel Grid.Row="2" Grid.Column="1" Grid.RowSpan="2">
-                        <ListBox Margin="0,0,0,0" Height="250">
+                        <TextBox Height="40" ></TextBox>
+                        <Rectangle Height="20" />
+                        <ListBox Margin="0,0,0,0" Height="190" SelectionChanged="ListBox_SelectionChanged">
                             
                         </ListBox>
                     </StackPanel>
-                    <Button Background="ForestGreen" Margin="10,0,0,0" Grid.Row="2" Grid.Column="2" Height="40" Grid.RowSpan="3" VerticalAlignment="Top">Add</Button>
+                    <Button Background="ForestGreen" Margin="10,0,0,0" Grid.Row="2" Grid.Column="2" Height="40" Grid.RowSpan="3" VerticalAlignment="Top" FontFamily="/MainPage;component/Fonts/#Apex New Light">Add</Button>
                     <Grid Grid.Column="2" Grid.Row="3">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="150"/>
                             <RowDefinition Height="50"/>
                         </Grid.RowDefinitions>
                         <StackPanel>
-                            <Button Cursor="Hand" Background="IndianRed" Margin="10,0,0,0" Grid.Row="2" Height="40">Delete</Button>
+                            <Button Cursor="Hand" Background="IndianRed" Margin="10,0,0,0" Grid.Row="2" Height="40" FontFamily="/MainPage;component/Fonts/#Apex New Light">Delete</Button>
                         </StackPanel>
-                        <Button Background="ForestGreen" Margin="10,0,0,0" Grid.Row="1">Next</Button>
+                        <Button Background="ForestGreen" Margin="10,0,0,0" Grid.Row="1" FontFamily="/MainPage;component/Fonts/#Apex New Light">Next</Button>
                     </Grid>
                 </Grid>
 
