--- a/SECURE-iT-Yourself/MainPage/SY_ViewCases.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_ViewCases.xaml
@@ -14,10 +14,10 @@
             </Grid.RowDefinitions>
             
             
-            <Button Cursor="Hand" HorizontalAlignment="Left" Width="90" Height="40" Background="Transparent" Foreground="Transparent" BorderBrush="Transparent">
+            <Button Click="Go_Back" Cursor="Hand" HorizontalAlignment="Left" Width="90" Height="40" Background="Transparent" Foreground="Transparent" BorderBrush="Transparent">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                     <Image Width="35" Height="35"  Source="pack://application:,,,/Resources/img/black_arrow.png"/>
-                    <Label FontSize="20" Foreground="White">Back</Label>
+                    <Label FontSize="20" Foreground="White" FontFamily="/MainPage;component/Fonts/#Apex New Light">Back</Label>
                 </StackPanel>
             </Button>
 
@@ -37,11 +37,11 @@
 
                     <Canvas>
                         <Rectangle  Height="45" Width="300" Fill="#25315D" Panel.ZIndex="0" ></Rectangle>
-                        <Label Canvas.Left="80" Canvas.Top="5" Foreground="White" FontSize="20">Network Description</Label>
+                        <Label  Canvas.Left="80" Canvas.Top="6" Foreground="White" FontSize="20" FontFamily="/MainPage;component/Fonts/#Renault BQ">Network Description</Label>
                     </Canvas>
 
                     <StackPanel Orientation="Horizontal" Grid.Column="2">
-                        <Button Cursor="Hand" Height="40" Width="100" Background="ForestGreen" FontSize="20">Search</Button>
+                        <Button Cursor="Hand" Height="40" Width="100" Background="ForestGreen" FontSize="20" FontFamily="/MainPage;component/Fonts/#Apex New Light">Search</Button>
                         <TextBox Height="40" Width="235"></TextBox>
                     </StackPanel>
                 </Grid>
