--- a/SECURE-iT-Yourself/MainPage/SY_NewCase.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_NewCase.xaml
@@ -48,14 +48,14 @@
                     </Grid.RowDefinitions>
 
                     <Label HorizontalAlignment="Right" FontSize="20" FontFamily="/MainPage;component/Fonts/#Apex New Light">Case Name:</Label>
-                    <TextBox Width="230" Grid.Column="1" Margin="0,0,0,0" TextChanged="TextBox_TextChanged"></TextBox>
+                    <TextBox Name="case_name"  Width="230" Grid.Column="1" Margin="0,0,0,0" TextChanged="TextBox_TextChanged"></TextBox>
                     <Label HorizontalAlignment="Right" Grid.Row="1" FontSize="20" FontFamily="/MainPage;component/Fonts/#Apex New Light">Case Description:</Label>
-                    <TextBox Height="120" Margin="0,12,0,12" Grid.Column="1" Grid.Row="1"></TextBox>
+                    <TextBox Name="case_desc" Height="120" Margin="0,12,0,12" Grid.Column="1" Grid.Row="1" TextChanged="TextBox_TextChanged_1"></TextBox>
                     <Label Margin="0,0,0,0" HorizontalAlignment="Right" FontSize="20" Grid.Row="2" FontFamily="/MainPage;component/Fonts/#Apex New Light">Investigated By:</Label>
                     <StackPanel Grid.Row="2" Grid.Column="1" Grid.RowSpan="2">
-                        <TextBox Height="40" ></TextBox>
+                        <TextBox Height="40" TextChanged="TextBox_TextChanged" ></TextBox>
                         <Rectangle Height="20" />
-                        <ListBox Margin="0,0,0,0" Height="190" SelectionChanged="ListBox_SelectionChanged">
+                        <ListBox Name="investigated_List" Margin="0,0,0,0" Height="190" SelectionChanged="ListBox_SelectionChanged">
                             
                         </ListBox>
                     </StackPanel>
@@ -68,7 +68,7 @@
                         <StackPanel>
                             <Button Cursor="Hand" Background="IndianRed" Margin="10,0,0,0" Grid.Row="2" Height="40" FontFamily="/MainPage;component/Fonts/#Apex New Light">Delete</Button>
                         </StackPanel>
-                        <Button Background="ForestGreen" Margin="10,0,0,0" Grid.Row="1" FontFamily="/MainPage;component/Fonts/#Apex New Light">Next</Button>
+                        <Button Click="Verify_Next" Background="ForestGreen" Margin="10,0,0,0" Grid.Row="1" FontFamily="/MainPage;component/Fonts/#Apex New Light">Next</Button>
                     </Grid>
                 </Grid>
 
