--- a/SECURE-iT-Yourself/MainPage/SY_NetworkLogUpload.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_NetworkLogUpload.xaml
@@ -14,10 +14,10 @@
                 <ColumnDefinition Width="90"/>
             </Grid.ColumnDefinitions>
             <StackPanel>
-                <Button Cursor="Hand" HorizontalAlignment="Left" Width="90" Height="40" Background="Transparent" Foreground="Transparent" BorderBrush="Transparent">
+                <Button Click="Back_Click" Cursor="Hand" HorizontalAlignment="Left" Width="90" Height="40" Background="Transparent" Foreground="Transparent" BorderBrush="Transparent">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                         <Image Width="35" Height="35"  Source="pack://application:,,,/Resources/img/black_arrow.png"/>
-                        <Label FontSize="20" Foreground="White">Back</Label>
+                        <Label FontFamily="/MainPage;component/Fonts/#Apex New Light" FontSize="20" Foreground="White">Back</Label>
                     </StackPanel>
                 </Button>
             </StackPanel>
@@ -30,7 +30,7 @@
                 <Grid Grid.Row="1">
                     <Canvas >
                         <Rectangle Width="300" Height="50" Fill="#25315D" ></Rectangle>
-                        <Label Canvas.Left="105" Canvas.Top="3" VerticalContentAlignment="Center" FontSize="25" Foreground="White">Network Logs</Label>
+                        <Label FontFamily="/MainPage;component/Fonts/#Renault BQ" Canvas.Left="105" Canvas.Top="5" VerticalContentAlignment="Center" FontSize="25" Foreground="White">Network Logs</Label>
                     </Canvas>
                 </Grid>
                 <Grid Grid.Row="2">
@@ -52,14 +52,14 @@
                         <RowDefinition Height="60" />
                     </Grid.RowDefinitions>
 
-                    <Label HorizontalAlignment="Right" Grid.Column="1" Grid.Row="1" FontSize="20" >Log Name: </Label>
-                    <TextBox Grid.Column="2" Grid.Row="1"></TextBox>
+                    <Label FontFamily="/MainPage;component/Fonts/#Apex New Light" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="1" FontSize="20" >Log Name: </Label>
+                    <TextBox FontSize="20" Grid.Column="2" Grid.Row="1"></TextBox>
 
-                    <Label Grid.Column="1" Grid.Row="3" FontSize="20" HorizontalAlignment="Right">Log Description: </Label>
-                    <TextBox TextWrapping="Wrap" Grid.Column="2" Grid.RowSpan="2" Height="100" Grid.Row="3"></TextBox>
+                    <Label Grid.Column="1" Grid.Row="3" FontSize="20" HorizontalAlignment="Right" FontFamily="/MainPage;component/Fonts/#Apex New Light">Log Description: </Label>
+                    <TextBox FontSize="11" TextWrapping="Wrap" Grid.Column="2" Grid.RowSpan="2" Height="100" Grid.Row="3"></TextBox>
 
-                    <Label Grid.Column="1" Grid.Row="6" FontSize="20" HorizontalAlignment="Right" >Log File: </Label>
-                    <TextBox Grid.Column="2" Grid.Row="6"></TextBox>
+                    <Label Grid.Column="1" Grid.Row="6" FontSize="20" HorizontalAlignment="Right" FontFamily="/MainPage;component/Fonts/#Apex New Light" >Log File: </Label>
+                    <TextBox FontSize="18" Grid.Column="2" Grid.Row="6"></TextBox>
 
                     <Button Grid.Column="3" Grid.Row="6" Width="80" Background="DarkSeaGreen">Upload</Button>
                     <Button Grid.Column="3" Grid.Row="7" Width="80" Margin="0,10,0,0" Background="DarkOliveGreen" >Next</Button>
