--- a/SECURE-iT-Yourself/MainPage/SY_NewCase.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_NewCase.xaml
@@ -36,7 +36,7 @@
                 <Grid Grid.Row="2" Margin="10" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="230.4" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
@@ -48,25 +48,24 @@
                     </Grid.RowDefinitions>
 
                     <Label HorizontalAlignment="Right" FontSize="20" FontFamily="/MainPage;component/Fonts/#Apex New Light">Case Name:</Label>
-                    <TextBox Name="case_name"  Width="230" Grid.Column="1" Margin="0,0,0,0" TextChanged="TextBox_TextChanged"></TextBox>
+                    <TextBox FontSize="20" Name="case_name"  Width="230" Grid.Column="1" Margin="0,0,0,0"></TextBox>
                     <Label HorizontalAlignment="Right" Grid.Row="1" FontSize="20" FontFamily="/MainPage;component/Fonts/#Apex New Light">Case Description:</Label>
-                    <TextBox Name="case_desc" Height="120" Margin="0,12,0,12" Grid.Column="1" Grid.Row="1" TextChanged="TextBox_TextChanged_1"></TextBox>
+                    <TextBox TextWrapping="Wrap" FontSize="13" Name="case_desc" Height="120" Margin="0,12,0,12" Grid.Column="1" Grid.Row="1"></TextBox>
                     <Label Margin="0,0,0,0" HorizontalAlignment="Right" FontSize="20" Grid.Row="2" FontFamily="/MainPage;component/Fonts/#Apex New Light">Investigated By:</Label>
                     <StackPanel Grid.Row="2" Grid.Column="1" Grid.RowSpan="2">
-                        <TextBox Height="40" TextChanged="TextBox_TextChanged" ></TextBox>
+                        <TextBox FontSize="20" Height="40" Name="insertName" ></TextBox>
                         <Rectangle Height="20" />
-                        <ListBox Name="investigated_List" Margin="0,0,0,0" Height="190" SelectionChanged="ListBox_SelectionChanged">
-                            
+                        <ListBox HorizontalContentAlignment="Center"  FontSize="20" Name="investList" Margin="0,0,0,0" Height="190" >
                         </ListBox>
                     </StackPanel>
-                    <Button Background="ForestGreen" Margin="10,0,0,0" Grid.Row="2" Grid.Column="2" Height="40" Grid.RowSpan="3" VerticalAlignment="Top" FontFamily="/MainPage;component/Fonts/#Apex New Light">Add</Button>
+                    <Button Click="AddName" Background="ForestGreen" Margin="10,0,0,0" Grid.Row="2" Grid.Column="2" Height="40" Grid.RowSpan="3" VerticalAlignment="Top" FontFamily="/MainPage;component/Fonts/#Apex New Light">Add</Button>
                     <Grid Grid.Column="2" Grid.Row="3">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="150"/>
                             <RowDefinition Height="50"/>
                         </Grid.RowDefinitions>
                         <StackPanel>
-                            <Button Cursor="Hand" Background="IndianRed" Margin="10,0,0,0" Grid.Row="2" Height="40" FontFamily="/MainPage;component/Fonts/#Apex New Light">Delete</Button>
+                            <Button Click="Remove_From_List" Cursor="Hand" Background="IndianRed" Margin="10,0,0,0" Grid.Row="2" Height="40" FontFamily="/MainPage;component/Fonts/#Apex New Light">Delete</Button>
                         </StackPanel>
                         <Button Click="Verify_Next" Background="ForestGreen" Margin="10,0,0,0" Grid.Row="1" FontFamily="/MainPage;component/Fonts/#Apex New Light">Next</Button>
                     </Grid>
