--- a/SECURE-iT-Yourself/MainPage/SY_NetworkLogUpload.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_NetworkLogUpload.xaml
@@ -61,8 +61,8 @@
                     <Label Grid.Column="1" Grid.Row="6" FontSize="20" HorizontalAlignment="Right" FontFamily="/MainPage;component/Fonts/#Apex New Light" >Log File: </Label>
                     <TextBox FontSize="18" Grid.Column="2" Grid.Row="6"></TextBox>
 
-                    <Button Grid.Column="3" Grid.Row="6" Width="80" Background="DarkSeaGreen">Upload</Button>
-                    <Button Grid.Column="3" Grid.Row="7" Width="80" Margin="0,10,0,0" Background="DarkOliveGreen" >Next</Button>
+                    <Button Click="upload_button" Grid.Column="3" Grid.Row="6" Width="80" Background="DarkSeaGreen">Upload</Button>
+                    <Button Click="validation_button" Grid.Column="3" Grid.Row="7" Width="80" Margin="0,10,0,0" Background="DarkOliveGreen" >Next</Button>
                     
                 </Grid>
             </Grid>
