--- a/SECURE-iT-Yourself/MainPage/SY_NetworkLogUpload.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_NetworkLogUpload.xaml
@@ -53,13 +53,13 @@
                     </Grid.RowDefinitions>
 
                     <Label FontFamily="/MainPage;component/Fonts/#Apex New Light" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="1" FontSize="20" >Log Name: </Label>
-                    <TextBox FontSize="20" Grid.Column="2" Grid.Row="1"></TextBox>
+                    <TextBox Name="Log_Name" FontSize="20" Grid.Column="2" Grid.Row="1"></TextBox>
 
                     <Label Grid.Column="1" Grid.Row="3" FontSize="20" HorizontalAlignment="Right" FontFamily="/MainPage;component/Fonts/#Apex New Light">Log Description: </Label>
-                    <TextBox FontSize="11" TextWrapping="Wrap" Grid.Column="2" Grid.RowSpan="2" Height="100" Grid.Row="3"></TextBox>
+                    <TextBox Name="Log_Desc" FontSize="11" TextWrapping="Wrap" Grid.Column="2" Grid.RowSpan="2" Height="100" Grid.Row="3"></TextBox>
 
                     <Label Grid.Column="1" Grid.Row="6" FontSize="20" HorizontalAlignment="Right" FontFamily="/MainPage;component/Fonts/#Apex New Light" >Log File: </Label>
-                    <TextBox FontSize="18" Grid.Column="2" Grid.Row="6"></TextBox>
+                    <TextBox Name="ShowPath" FontSize="18" Grid.Column="2" Grid.Row="6"></TextBox>
 
                     <Button Click="upload_button" Grid.Column="3" Grid.Row="6" Width="80" Background="DarkSeaGreen">Upload</Button>
                     <Button Click="validation_button" Grid.Column="3" Grid.Row="7" Width="80" Margin="0,10,0,0" Background="DarkOliveGreen" >Next</Button>
