--- a/SECURE-iT-Yourself/MainPage/SY_NetworkLogUpload.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_NetworkLogUpload.xaml
@@ -49,7 +49,9 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="10" />
                         <RowDefinition Height="Auto" />
-                        <RowDefinition Height="60" />
+                        <RowDefinition Height="50" />
+                        <RowDefinition Height="*" />
+
                     </Grid.RowDefinitions>
 
                     <Label FontFamily="/MainPage;component/Fonts/#Apex New Light" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="1" FontSize="20" >Log Name: </Label>
@@ -62,7 +64,15 @@
                     <TextBox Name="ShowPath" FontSize="18" Grid.Column="2" Grid.Row="6"></TextBox>
 
                     <Button Click="upload_button" Grid.Column="3" Grid.Row="6" Width="80" Background="DarkSeaGreen">Upload</Button>
-                    <Button Click="validation_button" Grid.Column="3" Grid.Row="7" Width="80" Margin="0,10,0,0" Background="DarkOliveGreen" >Next</Button>
+                    <Button Click="validation_button" Grid.Column="3" Grid.Row="7" Height="40" Width="80"  Background="DarkOliveGreen" >Next</Button>
+
+                    <Label Grid.Column="1" Width="144" Grid.Row="7" HorizontalContentAlignment="Right"  FontSize="20" FontFamily="/MainPage;component/Fonts/#Apex New Light">Log Format: </Label>
+                    <ComboBox Name="formatBox" HorizontalContentAlignment="Center" Grid.Column="2" Grid.Row="7" Height="40" >
+                        <ComboBoxItem FontSize="20">Window Firewall</ComboBoxItem>
+                        <ComboBoxItem FontSize="20">Linux IPTABLES firewall</ComboBoxItem>
+                        <ComboBoxItem FontSize="20">SSH Logs</ComboBoxItem>
+                        <ComboBoxItem FontSize="20">Correlated Linux Logs</ComboBoxItem>
+                    </ComboBox>
                     
                 </Grid>
             </Grid>
